# fastapi-reference

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
database/: env.py
database/versions/: 7ebb3fc55bcd_initial.py
docs/: components.txt  pdm-guide.txt  why-fastapi.txt
scripts/: drop_tables.py
src/fastapi_reference/: dependencies.py  main.py
src/fastapi_reference/common/schemas/: base_schema.py  person_schemas.py  todo_schemas.py
src/fastapi_reference/data/models/: __init__.py  base_sql_model.py  person.py  todo.py
src/fastapi_reference/data/repositories/: __init__.py  person_repository.py  todo_repository.py
src/fastapi_reference/domain/managers/: __init__.py  person_manager.py  todo_manager.py
src/fastapi_reference/host/handler/: __init__.py  base_sql_model_handler.py  person_handler.py  todo_handler.py
src/fastapi_reference/host/routers/: person_router.py  todo_router.py
src/fastapi_reference/settings/: __init__.py  app_settings.py
